Textureダウンロード問題修正